--- a/WebForm/SiteMaster.Master
+++ b/WebForm/SiteMaster.Master
@@ -4,16 +4,19 @@
 
 <html>
 <head runat="server">
-    <title>Trang chủ</title>
+    <title></title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <%-- Boostrap 5 --%>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <%-- Style CSS --%>
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <div class="container-fluid p-5 bg-primary text-white text-center">
+    <div class="container-fluid header__bg">
         <h1>Quản lý học viên</h1>
         <p><i>Thực hành môn lập trình website nâng cao!</i></p>
     </div>
