--- a/WebForm/SiteMaster.Master
+++ b/WebForm/SiteMaster.Master
@@ -4,9 +4,11 @@
 
 <html>
 <head runat="server">
-    <title></title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="/assets/img/favicon.png" />
+    <%-- Font awesome --%>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <%-- Boostrap 5 --%>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -15,11 +17,47 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body>
+<body class="bg-grey">
     <div class="container-fluid header__bg">
-        <h1>Quản lý học viên</h1>
+        <h1>Website bán hàng</h1>
         <p><i>Thực hành môn lập trình website nâng cao!</i></p>
     </div>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/Default.aspx">Trang chủ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/products/list.aspx">Sản phẩm</a>
+                </li>
+            </ul>
+
+            <ul class="navbar-nav d-flex">
+                <li class="nav-item dropdown">
+                    <% if (Convert.ToBoolean(Session["Login"]))
+                        { %>
+                <li class="nav-item dropdown">
+                    <a class="nav-link active dropdown-toggle" href="#" id="profile" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img class="avatar_custom" src="<%=Session["Avatar"] %>" alt="" />
+                        <%=Session["DisplayName"] %>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profile">
+                        <li><a class="dropdown-item" href="#">Thông tin cá nhân</a></li>
+                        <li><a class="dropdown-item" href="/Logout.aspx">Đăng xuất</a></li>
+                    </ul>
+                </li>
+                <% }
+                    else
+                    { %>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/Login.aspx"><i class="fas fa-sign-in-alt"></i> Đăng nhập</a>
+                </li>
+                <% } %>
+            </ul>
+        </div>
+    </nav>
 
     <div class="container mt-5">
         <form id="form1" runat="server">
