--- a/WebForm/assets/css/style.css
+++ b/WebForm/assets/css/style.css
@@ -1,5 +1,5 @@
 ﻿.header__bg {
-    background: bottom / cover no-repeat url('/img/header_bg.jpg');
+    background: bottom / cover no-repeat url('/assets/img/header_bg.jpg');
     color: white;
     padding: 3rem;
     text-align: center;
